--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,7 @@
             <artifactId>camunda-spin-dataformat-all</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.camunda.spin</groupId>
-            <artifactId>camunda-spin-dataformat-json-jackson</artifactId>
-        </dependency>
+
         <!-- Database (MySQL, H2 or postgresql) drivers -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -123,6 +120,13 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>2.1</version>
+        </dependency>
+
+        <!-- FireBase Admin -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.8.0</version>
         </dependency>
 
     </dependencies>
