--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <version>2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.camunda.bpm</groupId>
+            <artifactId>camunda-external-task-client</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
         <!-- FireBase Admin -->
         <dependency>
             <groupId>com.google.firebase</groupId>
