--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ camunda:
 spring:
   profiles:
     active: local
+
+statusUpdateWebhookURL: "https://hook.integromat.com/phxd3eepyetckunbowpf7ps9a3y4hk76"
 #  datasource:
 #    url: jdbc:h2:file:./data/camunda
 #    username: sa
